# kafka-acl-wrapper

./: .env.example  .gitignore  README.md  pyproject.toml
kafka_acl_wrapper/: acl_bindings.py  cli.py  common_docs.py  config.py  main.py  utility.py
