[tool.poetry]
name = "kafka-acl-wrapper"
version = "0.1.0"
description = ""
authors = ["Theodore Gautama Chandra <theoengphys@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.5"
confluent-kafka = "2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
